--- a/css/all.css
+++ b/css/all.css
@@ -1,3 +1,27 @@
-.redcolor{
-    color: red;
+.bgimage{
+    max-width: 100%;
+    height: 450px;
+    background-image: url('/img/photo2.JPG');
+    background-position: center center;
+    background-size: cover;
+}
+.bgimagetext{
+    background-color: rgba(0,0,0,.45);
+    text-align: center;
+    color: white;
+
+}
+h2{
+    padding: 1rem;
+    text-align: center;
+}
+.bgcustome{
+    background-color: #BBF7B5;
+}
+.drinkimg{
+    max-width: 100%;
+}
+span{
+    font-size: 28px;
+    text-decoration: underline;
 }
